--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-06-phonebook",
+  "name": "goit-react-hw-06-phonebook-redux-toolkit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tatiana-goit.github.io/goit-react-hw-06-phonebook-vanila-redux",
+  "homepage": "https://Tatiana-goit.github.io/goit-react-hw-06-phonebook-redux-toolkit",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,6 +20,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
